p2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  selector:
    matchLabels:
      app: app-one
  replicas: 1
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: paulbouwer/hello-kubernetes:1.10
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two
          image: paulbouwer/hello-kubernetes:1.10
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  replicas: 1
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: paulbouwer/hello-kubernetes:1.10
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - port: 80
      targetPort: 8080
